adding authorization in swagger
