# account/generateKey.go
@@ -13,19 +13,29 @@ import (
 // SecretKey is the key used for signing the JWT
 var SecretKey = []byte("your-secret-key")
 
-// JWTClaims represents the claims stored in the JWT
 type JWTClaims struct {
 	Username string `json:"username"`
 	jwt.StandardClaims
 }
 
 // LoginHandler handles user login and generates a JWT
+//
+//	@Summary		It will generate the key that will use to log-in in swagger
+//	@Description	Auto generate secret key
+//	@Produce		json
+//	@Param			username	formData	string	true	"Username"
+//	@Param			password	formData	string	true	"Password"
+//	@Tags			Admin
+//
+//	@Security		JWT-Token
+//
+//	@Success		200	{object}	security.SecretKey
+//	@Success		200	{string}	string	"Successfully accessed"
+//	@Failure		400	{object}	errors.ErrorModel
+//	@Failure		401	{object}	errors.ErrorModel
+//	@Router			/secure/login [post]
 func LoginHandler(c *fiber.Ctx) error {
-	requestBody := struct {
-		Username string `json:"username"`
-		Password string `json:"password"`
-	}{}
-
+	requestBody := security.Identification{}
 	// Parse JSON request body
 	if err := c.BodyParser(&requestBody); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Invalid request body"})
@@ -33,7 +43,7 @@ func LoginHandler(c *fiber.Ctx) error {
 
 	// Retrieve user from the database based on the username
 	var user security.User
-	if err := database.DBConn.Debug().Raw("SELECT username  FROM credentials WHERE username = ?", requestBody.Username).First(&user).Error; err != nil {
+	if err := database.DBConn.Debug().Raw("SELECT username, password  FROM credentials WHERE username = ?", requestBody.Username).First(&user).Error; err != nil {
 		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid credentials"})
 	}
 
@@ -41,15 +51,13 @@ func LoginHandler(c *fiber.Ctx) error {
 	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(requestBody.Password)); err != nil {
 		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid credentials"})
 	}
-
 	// Generate JWT token
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, JWTClaims{
 		Username: user.Username,
 		StandardClaims: jwt.StandardClaims{
-			ExpiresAt: time.Now().Add(time.Hour * 24).Unix(), // Token expires in 24 hours
+			ExpiresAt: time.Now().Add(time.Minute * 5).Unix(), // Token expires in 24 hours
 		},
 	})
-
 	// Sign the token with the secret key
 	tokenString, err := token.SignedString(SecretKey)
 	if err != nil {
@@ -58,4 +66,5 @@ func LoginHandler(c *fiber.Ctx) error {
 
 	// Return the generated token
 	return c.JSON(fiber.Map{"token": tokenString})
+
 }
