# docs/swagger.json
@@ -6,16 +6,16 @@
         "contact": {},
         "version": "1.16.2"
     },
-    "basePath": "/auth",
+    "basePath": "/auth/",
     "paths": {
         "/register/teacher": {
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "JWT-Token": []
                     }
                 ],
-                "description": "Create a new teacher account with the provided data.",
+                "description": "Add a new teacher to the database",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,13 +23,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Teachers"
+                    "teachers"
                 ],
-                "summary": "Create a new teacher account",
+                "summary": "Create a new teacher",
                 "parameters": [
                     {
-                        "description": "Teacher data to be created",
-                        "name": "teacher",
+                        "description": "Enter the Description",
+                        "name": "department",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -38,10 +38,57 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "Teacher added successfully",
                         "schema": {
-                            "$ref": "#/definitions/struct_test.AdminAcc"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/secure/login": {
+            "post": {
+                "security": [
+                    {
+                        "JWT-Token": []
+                    }
+                ],
+                "description": "Auto generate secret key",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "It will generate the key that will use to log-in in swagger",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully accessed",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -52,12 +99,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrorModel"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/errors.ErrorModel"
                         }
@@ -125,6 +166,14 @@
                 }
             }
         },
+        "security.SecretKey": {
+            "type": "object",
+            "properties": {
+                "secret_key": {
+                    "type": "string"
+                }
+            }
+        },
         "struct_test.AdminAcc": {
             "description": "struct for getting the credentials",
             "type": "object",
@@ -132,16 +181,7 @@
                 "department": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "user_work": {
                     "type": "string"
                 }
             }
@@ -171,6 +211,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT-Token": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
