# struct/security/security.go
@@ -12,3 +12,14 @@ type User struct {
 	Password string `json:"password"`
 	Status   string `json:"status"`
 }
+
+// JWTClaims represents the claims stored in the JWT
+
+type Identification struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type SecretKey struct {
+	SecretKey string `json:"secret_key"`
+}
